[gd_scene load_steps=29 format=3 uid="uid://bqbo5bjedt1t"]

[ext_resource type="PackedScene" uid="uid://c4vfgmasxvoq7" path="res://Scenes/3D/random_house.tscn" id="1_ky1y3"]
[ext_resource type="Script" path="res://Scripts/3d/random_estate.gd" id="1_t7y7u"]
[ext_resource type="PackedScene" uid="uid://dpc7j0yqchso6" path="res://Assets/3DModels/kenney_city-kit-suburban/Models/GLTF format/path_tilesLong.glb" id="2_p7sq7"]
[ext_resource type="PackedScene" uid="uid://cxbgdgsl01wn4" path="res://Assets/3DModels/kenney_city-kit-suburban/Models/GLTF format/fence_wide.glb" id="3_v0q6b"]
[ext_resource type="Script" path="res://Scripts/3d/random_tree_size.gd" id="4_264mw"]
[ext_resource type="PackedScene" uid="uid://bnvlltnnnurxa" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/tree-snow-b.glb" id="4_tlcs1"]
[ext_resource type="PackedScene" uid="uid://d1ek4e86oqlyc" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/tree.glb" id="5_uebqb"]
[ext_resource type="PackedScene" uid="uid://53loxxnhkuyr" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/tree-decorated.glb" id="8_xf2iq"]
[ext_resource type="PackedScene" uid="uid://bnnt58isyqtah" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/tree-decorated-snow.glb" id="9_objdt"]
[ext_resource type="PackedScene" uid="uid://iw52ugpmna4b" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/nutcracker.glb" id="10_la4g5"]
[ext_resource type="PackedScene" uid="uid://50t7lfmjncvf" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/present-a-cube.glb" id="11_snmwk"]
[ext_resource type="PackedScene" uid="uid://c5jkxb3b8lcnv" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/reindeer.glb" id="12_e0v56"]
[ext_resource type="PackedScene" uid="uid://domqj5p0h4giu" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/rocks-large.glb" id="13_h3ktm"]
[ext_resource type="PackedScene" uid="uid://dygj6sf4xore4" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/lights-red.glb" id="14_sc4xn"]
[ext_resource type="PackedScene" uid="uid://r35hlgw35apc" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/lantern.glb" id="15_71qmr"]
[ext_resource type="PackedScene" uid="uid://3tlds2y2j615" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/lantern-hanging.glb" id="16_0aadh"]
[ext_resource type="PackedScene" uid="uid://npai6a4eeh40" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/gingerbread-woman.glb" id="17_4127g"]
[ext_resource type="PackedScene" uid="uid://cx5ku4rrkfdb4" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/gingerbread-man.glb" id="18_timqi"]
[ext_resource type="PackedScene" uid="uid://cx6d1i4oxlhi" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/festivus-pole.glb" id="19_8rrt0"]
[ext_resource type="PackedScene" uid="uid://d213y8hab8euv" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/snowman.glb" id="20_8ahhn"]
[ext_resource type="PackedScene" uid="uid://ckhf7uy18v6d4" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/sled.glb" id="21_keb14"]
[ext_resource type="PackedScene" uid="uid://cny5vd3vve45l" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/snow-bunker.glb" id="22_bdpnk"]
[ext_resource type="PackedScene" uid="uid://4don2y4454l7" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/snow-flat-large.glb" id="23_2eavp"]
[ext_resource type="PackedScene" uid="uid://b80ysibn2ogn0" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/snow-pile.glb" id="24_84n1x"]
[ext_resource type="PackedScene" uid="uid://beqkussnjmxdi" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/lights-colored.glb" id="25_qxf86"]
[ext_resource type="PackedScene" uid="uid://bs6q0dlxt00hj" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/wreath-decorated.glb" id="26_ha1dt"]
[ext_resource type="PackedScene" uid="uid://4gri6o5dm35n" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/present-b-rectangle.glb" id="27_r2odw"]
[ext_resource type="PackedScene" uid="uid://be47jqhja3hqv" path="res://Assets/3DModels/kenney_holiday-kit/Models/GLB format/present-b-round.glb" id="28_mjk0c"]

[node name="Estate" type="Node3D"]
transform = Transform3D(0.999391, 0.0348995, 0, -0.0348995, 0.999391, 0, 0, 0, 1, 0.675, 0.17, 0)
script = ExtResource("1_t7y7u")

[node name="RandomHouse" parent="." instance=ExtResource("1_ky1y3")]
transform = Transform3D(-3.49691e-07, 0, 8, 0, 8, 0, -8, 0, -3.49691e-07, -17.1999, 0, -0.262032)

[node name="fence_wide2" parent="." instance=ExtResource("3_v0q6b")]
transform = Transform3D(-8.00305e-07, -0.279196, 44.7377, -2.79473e-08, 7.99513, 1.56228, -18.32, 0, -1.95674e-06, -17.0117, -0.764165, 0.005)

[node name="Tiles" type="Node3D" parent="."]

[node name="path_tilesLong2" parent="Tiles" instance=ExtResource("2_p7sq7")]
transform = Transform3D(8, 0, 0, 0, 16, 0, 0, 0, 8, -5.81572, -1.49012e-08, -0.117904)

[node name="path_tilesLong7" parent="Tiles" instance=ExtResource("2_p7sq7")]
transform = Transform3D(8, 0, 0, 0, 16, 0, 0, 0, 8, -5.81572, -1.49012e-08, -3.31618)

[node name="path_tilesLong8" parent="Tiles" instance=ExtResource("2_p7sq7")]
transform = Transform3D(8, 0, 0, 0, 16, 0, 0, 0, 8, -5.81572, -1.49012e-08, -6.51271)

[node name="path_tilesLong9" parent="Tiles" instance=ExtResource("2_p7sq7")]
transform = Transform3D(8, 0, 0, 0, 16, 0, 0, 0, 8, -5.81572, -1.49012e-08, -9.71084)

[node name="path_tilesLong10" parent="Tiles" instance=ExtResource("2_p7sq7")]
transform = Transform3D(8, 0, 0, 0, 16, 0, 0, 0, 8, -5.81544, 9.62615e-06, -12.912)

[node name="path_tilesLong3" parent="Tiles" instance=ExtResource("2_p7sq7")]
transform = Transform3D(8, 0, 0, 0, 16, 0, 0, 0, 8, -5.81572, -1.49012e-08, 3.07615)

[node name="path_tilesLong4" parent="Tiles" instance=ExtResource("2_p7sq7")]
transform = Transform3D(8, 0, 0, 0, 16, 0, 0, 0, 8, -5.81572, -1.49012e-08, 6.2581)

[node name="path_tilesLong5" parent="Tiles" instance=ExtResource("2_p7sq7")]
transform = Transform3D(8, 0, 0, 0, 16, 0, 0, 0, 8, -5.81572, -1.49012e-08, 9.44816)

[node name="path_tilesLong6" parent="Tiles" instance=ExtResource("2_p7sq7")]
transform = Transform3D(8, 0, 0, 0, 16, 0, 0, 0, 8, -5.81572, -1.49012e-08, 12.6338)

[node name="Trees" type="Node3D" parent="."]
script = ExtResource("4_264mw")

[node name="tree-snow-b2" parent="Trees" instance=ExtResource("4_tlcs1")]
transform = Transform3D(7.99513, -0.279196, 0, 0.279196, 7.99513, 0, 0, 0, 8, -27.589, -7.45058e-08, 9.818)

[node name="tree2" parent="Trees" instance=ExtResource("5_uebqb")]
transform = Transform3D(7.99513, -0.279196, 0, 0.279196, 7.99513, 0, 0, 0, 8, -21.379, -1.49012e-08, 9.92)

[node name="tree-snow-b3" parent="Trees" instance=ExtResource("4_tlcs1")]
transform = Transform3D(7.99513, -0.279196, 0, 0.279196, 7.99513, 0, 0, 0, 8, -28.513, -0.0322673, -3.06523)

[node name="tree3" parent="Trees" instance=ExtResource("5_uebqb")]
transform = Transform3D(7.99513, -0.279196, 0, 0.279196, 7.99513, 0, 0, 0, 8, -22.303, -0.0322673, -2.96323)

[node name="tree-snow-b4" parent="Trees" instance=ExtResource("4_tlcs1")]
transform = Transform3D(7.99513, -0.279196, 0, 0.279196, 7.99513, 0, 0, 0, 8, -24.8627, 0.0952056, 3.58542)

[node name="tree4" parent="Trees" instance=ExtResource("5_uebqb")]
transform = Transform3D(7.99513, -0.279196, 0, 0.279196, 7.99513, 0, 0, 0, 8, -31.683, -0.359825, 3.68742)

[node name="tree6" parent="Trees" instance=ExtResource("5_uebqb")]
transform = Transform3D(7.99513, -0.142844, 0, 0.279196, 4.09052, 0, 0, 0, 25.6904, -36.5986, -2.07404, -7.73894)

[node name="tree7" parent="Trees" instance=ExtResource("5_uebqb")]
transform = Transform3D(7.99513, -0.142844, 0, 0.279196, 4.09052, 0, 0, 0, 25.6904, -36.5986, -2.07404, 7.41798)

[node name="tree-snow-b5" parent="Trees" instance=ExtResource("4_tlcs1")]
transform = Transform3D(7.99513, -0.279196, 0, 0.279196, 7.99513, 0, 0, 0, 8, -24.8156, 0.0968468, -8.99843)

[node name="tree5" parent="Trees" instance=ExtResource("5_uebqb")]
transform = Transform3D(7.99513, -0.279196, 0, 0.279196, 7.99513, 0, 0, 0, 8, -31.636, -0.358184, -8.89643)

[node name="Decorations" type="Node3D" parent="."]

[node name="tree-decorated2" parent="Decorations" instance=ExtResource("8_xf2iq")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -9.27161, 1.06454e-06, -8.76651)

[node name="tree-decorated-snow2" parent="Decorations" instance=ExtResource("9_objdt")]
transform = Transform3D(1.99878, -0.069799, 0, 0.069799, 1.99878, 0, 0, 0, 2, -9.03222, -0.00329937, 11.366)

[node name="nutcracker2" parent="Decorations" instance=ExtResource("10_la4g5")]
transform = Transform3D(0.617085, -0.0348995, 0.786122, 0.0215491, 0.999391, 0.027452, -0.786601, 0, 0.617462, -7.2432, 0.0639173, -5.47962)

[node name="present-a-cube4" parent="Decorations" instance=ExtResource("11_snmwk")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -8.42974, -0.0159001, -7.95154)

[node name="reindeer2" parent="Decorations" instance=ExtResource("12_e0v56")]
transform = Transform3D(0.521049, -0.0348995, 0.852813, 0.0181954, 0.999391, 0.0297809, -0.853332, 1.86265e-09, 0.521367, -7.40198, 0.0767478, -2.72032)

[node name="reindeer3" parent="Decorations" instance=ExtResource("12_e0v56")]
transform = Transform3D(0.521049, -0.0348995, 0.852813, 0.0181954, 0.999391, 0.0297809, -0.853332, 1.86265e-09, 0.521367, -11.4749, -0.0654816, 12.6051)

[node name="rocks-large2" parent="Decorations" instance=ExtResource("13_h3ktm")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -12.5557, -0.240791, -12.3735)

[node name="rocks-large3" parent="Decorations" instance=ExtResource("13_h3ktm")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -15.0579, -0.328168, 11.0658)

[node name="lights-red2" parent="Decorations" instance=ExtResource("14_sc4xn")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -7.76899, -0.441403, 2.09821)

[node name="lantern2" parent="Decorations" instance=ExtResource("15_71qmr")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -6.78669, -0.4071, -1.41214)

[node name="lantern-hanging2" parent="Decorations" instance=ExtResource("16_0aadh")]
transform = Transform3D(0.000243599, -0.0348986, 0.999391, -0.00697701, 0.999366, 0.0348995, -0.999975, -0.00698126, -4.36848e-08, -12.5811, 2.21477, -0.955773)

[node name="gingerbread-woman2" parent="Decorations" instance=ExtResource("17_4127g")]
transform = Transform3D(1.63023, -0.1129, 2.79192, 0.0569288, 3.23303, 0.0974961, -2.79363, 1.02028e-08, 1.63122, -7.99519, 0.0461227, -4.38328)

[node name="gingerbread-woman3" parent="Decorations" instance=ExtResource("17_4127g")]
transform = Transform3D(1.63023, -0.1129, 2.79192, 0.0569288, 3.23303, 0.0974961, -2.79363, 1.02028e-08, 1.63122, -12.3106, -0.104576, 11.1635)

[node name="gingerbread-man2" parent="Decorations" instance=ExtResource("18_timqi")]
transform = Transform3D(1.68463, -0.1129, 2.75944, 0.0588286, 3.23303, 0.0963616, -2.76112, 0, 1.68566, -8.96331, 0.00940777, -3.18116)

[node name="gingerbread-man3" parent="Decorations" instance=ExtResource("18_timqi")]
transform = Transform3D(1.68463, -0.1129, 2.75944, 0.0588286, 3.23303, 0.0963616, -2.76112, 0, 1.68566, -10.752, 0.20615, 9.78182)

[node name="festivus-pole2" parent="Decorations" instance=ExtResource("19_8rrt0")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -6.56655, -0.399413, 3.18657)

[node name="snowman2" parent="Decorations" instance=ExtResource("20_8ahhn")]
transform = Transform3D(0.916935, -0.0542687, 1.25472, 0.0320201, 1.55405, 0.0438156, -1.25548, 0, 0.917494, -7.81383, -0.088549, 9.592)

[node name="sled2" parent="Decorations" instance=ExtResource("21_keb14")]
transform = Transform3D(-0.927888, -0.0348995, 0.371223, -0.0324026, 0.999391, 0.0129634, -0.371449, 0, -0.928453, -7.43956, 0.0175987, 12.0634)

[node name="snow-bunker2" parent="Decorations" instance=ExtResource("22_bdpnk")]
transform = Transform3D(1.4691, -0.0513023, 0, 0.0513023, 1.4691, 0, 0, 0, 1.47, -5.71216, -0.0551064, 6.7921)

[node name="snow-bunker3" parent="Decorations" instance=ExtResource("22_bdpnk")]
transform = Transform3D(1.4691, -0.0513023, 0, 0.0513023, 1.4691, 0, 0, 0, 1.47, -5.71216, -0.0551064, -10.4466)

[node name="snow-bunker5" parent="Decorations" instance=ExtResource("22_bdpnk")]
transform = Transform3D(1.4691, -0.0513023, 0, 0.0513023, 1.4691, 0, 0, 0, 1.47, -8.42247, -0.149752, -0.0799971)

[node name="snow-bunker4" parent="Decorations" instance=ExtResource("22_bdpnk")]
transform = Transform3D(1.4691, -0.0513023, 0, 0.0513023, 1.4691, 0, 0, 0, 1.47, -5.71216, -0.0551064, 1.07766)

[node name="snow-flat-large2" parent="Decorations" instance=ExtResource("23_2eavp")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -8.12817, -0.0554788, 4.50243)

[node name="snow-flat-large3" parent="Decorations" instance=ExtResource("23_2eavp")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -10.5098, -0.0754845, -2.91644)

[node name="snow-flat-large4" parent="Decorations" instance=ExtResource("23_2eavp")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -10.5098, -0.0754845, -12.363)

[node name="snow-pile2" parent="Decorations" instance=ExtResource("24_84n1x")]
transform = Transform3D(2.17368, -0.0759064, 0, 0.0759064, 2.17368, 0, 0, 0, 2.175, -5.63726, -0.0351338, -4.21469)

[node name="snow-pile3" parent="Decorations" instance=ExtResource("24_84n1x")]
transform = Transform3D(2.17368, -0.0759064, 0, 0.0759064, 2.17368, 0, 0, 0, 2.175, -5.63726, -0.0351338, 10.7473)

[node name="Colored Lights" type="Node3D" parent="Decorations"]

[node name="lights-colored2" parent="Decorations/Colored Lights" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -9.32883, 0.702401, -14.1204)

[node name="lights-colored3" parent="Decorations/Colored Lights" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -11.786, 0.616596, -14.1204)

[node name="lights-colored4" parent="Decorations/Colored Lights" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -14.1554, 0.533854, -14.1204)

[node name="lights-colored5" parent="Decorations/Colored Lights" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -16.5733, 0.449419, -14.1204)

[node name="lights-colored6" parent="Decorations/Colored Lights" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -18.9466, 0.366543, -14.1204)

[node name="lights-colored7" parent="Decorations/Colored Lights" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -21.3927, 0.281122, -14.1204)

[node name="lights-colored8" parent="Decorations/Colored Lights" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -23.8629, 0.19486, -14.1204)

[node name="Colored Lights2" type="Node3D" parent="Decorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 28.18)

[node name="lights-colored2" parent="Decorations/Colored Lights2" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -9.32883, 0.702401, -14.1204)

[node name="lights-colored3" parent="Decorations/Colored Lights2" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -11.786, 0.616596, -14.1204)

[node name="lights-colored4" parent="Decorations/Colored Lights2" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -14.1554, 0.533854, -14.1204)

[node name="lights-colored5" parent="Decorations/Colored Lights2" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -16.5733, 0.449419, -14.1204)

[node name="lights-colored6" parent="Decorations/Colored Lights2" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -18.9466, 0.366543, -14.1204)

[node name="lights-colored7" parent="Decorations/Colored Lights2" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -21.3927, 0.281122, -14.1204)

[node name="lights-colored8" parent="Decorations/Colored Lights2" instance=ExtResource("25_qxf86")]
transform = Transform3D(2.41353, -0.0842823, 0, 0.0842823, 2.41353, 0, 0, 0, 2.415, -23.8629, 0.19486, -14.1204)

[node name="wreath-decorated2" parent="Decorations" instance=ExtResource("26_ha1dt")]
transform = Transform3D(-0.000182776, -0.034899, 0.999391, 0.00523277, 0.999377, 0.0348995, -0.999986, 0.00523596, -4.36848e-08, -12.6633, 1.39725, -0.12394)

[node name="present-b-rectangle2" parent="Decorations" instance=ExtResource("27_r2odw")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -8.26007, -0.093875, -9.08496)

[node name="present-b-round2" parent="Decorations" instance=ExtResource("28_mjk0c")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -9.9109, -0.0741988, -7.47438)

[node name="present-b-rectangle3" parent="Decorations" instance=ExtResource("27_r2odw")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -9.61295, -0.0667256, -10.6274)

[node name="present-a-cube5" parent="Decorations" instance=ExtResource("11_snmwk")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -8.42974, -0.0159001, 12.7096)

[node name="present-b-rectangle4" parent="Decorations" instance=ExtResource("27_r2odw")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -8.26007, -0.093875, 11.5762)

[node name="present-b-round3" parent="Decorations" instance=ExtResource("28_mjk0c")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -9.9109, -0.0741988, 13.1868)

[node name="present-b-rectangle5" parent="Decorations" instance=ExtResource("27_r2odw")]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, -9.61295, -0.0667256, 10.0338)
